After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 601725 - Right-clicking item in Nautilus' sidebar tree doesn't select it
Right-clicking item in Nautilus' sidebar tree doesn't select it
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: [obsolete] Sidebar Panel: Tree
2.28.x
Other Linux
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-11-12 17:59 UTC by Sense Hofstede
Modified: 2011-09-11 01:48 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sense Hofstede 2009-11-12 17:59:19 UTC
If you've selected a directory in the sidebar's tree and right-click on another directory, you will get the context menu of the directory you right-clicked on, but -- in contrary to the behaviour of Listview -- the directory won't get the selection.

This is inconsistent and not as expected. Therefore it is suggested to select directories in the sidebar's tree as well when it's right-clicked on.

This bug was originally reported by eyeskream in Ubuntu's bug tracker on Launchpad, https://launchpad.net/bugs/429046

Please note that this bug was written from a right-handed point of view. In case you are left-handed and use the left mouse button to summon context menus, you should test this with left-clicking.
Comment 1 binwiederhier 2011-03-02 20:31:47 UTC
This bug is still up to date even though it was reported over a year ago.
Any progress on this?
Comment 2 Cosimo Cecchi 2011-09-11 01:48:19 UTC
I pushed a fix for this to git master, thanks for the report.