tree-sidebar: don't block the parent handler when popping up a menu

Otherwise the treeview will not select the row where the event happened.

https://bugzilla.gnome.org/show_bug.cgi?id=601725